--- a/action.yml
+++ b/action.yml
@@ -1,7 +1,7 @@
 name: "Podcast Generator"
 author: "Matt Erdem"
 description: "Generates a feed for a podcast from a YAML file"
-run:
+runs:
   using: "docker"
   image: "Dockerfile"
 branding: 
